RESOLVED FIXED204455
[iOS] Web process crashes when attempting to request document context in a textarea
https://bugs.webkit.org/show_bug.cgi?id=204455
Summary [iOS] Web process crashes when attempting to request document context in a te...
Wenson Hsieh
Reported 2019-11-21 09:28:26 PST
Attachments
Patch (6.85 KB, patch)
2019-11-21 10:10 PST, Wenson Hsieh
no flags
Fix non-internal iOS build (7.58 KB, patch)
2019-11-21 10:31 PST, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2019-11-21 10:10:28 PST Comment hidden (obsolete)
Wenson Hsieh
Comment 2 2019-11-21 10:31:00 PST
Created attachment 384067 [details] Fix non-internal iOS build
WebKit Commit Bot
Comment 3 2019-11-21 11:50:28 PST
Comment on attachment 384067 [details] Fix non-internal iOS build Clearing flags on attachment: 384067 Committed r252743: <https://trac.webkit.org/changeset/252743>
WebKit Commit Bot
Comment 4 2019-11-21 11:50:30 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.